<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.addMedicine.AddMedicineFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/medicine_form_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_form_info"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_form_medicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medicine_form_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/medicine_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_form_medicine"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/medicine_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/medicine_name_question"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/medicine_dose_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medicine_name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/medicine_dose_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/medicine_dose_question"
            android:inputType="numberDecimal"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/first_notification_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medicine_dose_layout" />

    <Spinner
        android:id="@+id/medicine_times_per_day_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@id/first_notification_time"
        app:layout_constraintTop_toBottomOf="@id/medicine_dose_layout"/>

    <TextView
        android:id="@+id/question_about_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/container_question"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medicine_times_per_day_spinner"
        app:layout_constraintBottom_toTopOf="@id/hidden_form_for_container"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/is_container_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@id/question_about_container"
        app:layout_constraintTop_toBottomOf="@id/medicine_times_per_day_spinner"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hidden_form_for_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/is_container_used">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/container_form_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/container_form_info"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_form_text"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/medicine_cell_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_form_container"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/medicine_cell_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/cell_question"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/medicine_number_in_container_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medicine_cell_layout"
            app:layout_constraintEnd_toStartOf="@id/medicine_critical_number_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/medicine_number_in_container_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/number_of_medicines_in_container_question"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/medicine_critical_number_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toEndOf="@id/medicine_number_in_container_layout"
            app:layout_constraintTop_toBottomOf="@id/medicine_cell_layout"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/medicine_critical_number_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/medicine_critical_number_question"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/create_medicine_notification_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_medicine_notification"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hidden_form_for_container"/>

</androidx.constraintlayout.widget.ConstraintLayout>